make some code changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ logging.file=/var/log/hello-world.log
 # HSQL config
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# monitor service configs
+monitor.run.every=5
+thread1.delay=50
+thread2.delay=50
