--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # monitor service configs
+# pause 2 seconds then start the scheduler
+monitor.start.after=2
+# run scheduler every 5 seconds
 monitor.run.every=5
 thread1.delay=50
 thread2.delay=50
