--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 # monitor service configs
+# Exits the service true/false, if deadlock is detected
+monitor.service.exit=true
 # pause 2 seconds then start the scheduler
 monitor.start.after=2
 # run scheduler every 5 seconds
